# AstroTools

./: README.md
data/models/Yields/CL13/: apj455654t7_mrt.txt  apj455654t8_mrt.txt  m013zsun.10  m013zsun.cum_ele  m013zsun.cum_iso_dec  m013zsun.cum_iso_nod  m013zsun.yele  m013zsun.yiso  m015zsun.10  m015zsun.cum_ele  m015zsun.cum_iso_dec  m015zsun.cum_iso_nod  m015zsun.yele  m015zsun.yiso  m020zsun.10  m020zsun.cum_ele  m020zsun.cum_iso_dec  m020zsun.cum_iso_nod  m020zsun.yele  m020zsun.yiso  m025zsun.10  m025zsun.cum_ele  m025zsun.cum_iso_dec  m025zsun.cum_iso_nod  m025zsun.yele  m025zsun.yiso  m030zsun.10  m030zsun.cum_ele  m030zsun.cum_iso_dec  m030zsun.cum_iso_nod  m030zsun.yele  m030zsun.yiso  m040zsun.10  m040zsun.cum_ele  m040zsun.cum_iso_dec  m040zsun.cum_iso_nod  m040zsun.yele  m040zsun.yiso  m060zsun.10  m060zsun.cum_ele  (+71 more)
data/models/Yields/LC17/: legenda
data/models/Yields/LC17/setF/: tab_F.tgz
data/models/Yields/LC17/setI/: tab_I.tgz
data/models/Yields/LC17/setM/: tab_M.tgz
data/models/Yields/LC17/setR/: tab_R.tgz
data/observations/abundances/: AG89.txt  Lodders09.txt
tools/: CMakeLists.txt
tools/examples/: SLR.C
tools/scripts/: LibsPersoAstroRootLogon.C  rootlogon.C  rootlogon.sh
tools/src/: CMakeLists.txt  abundances.cpp  abundances.hpp  isotope.cpp  isotope.hpp  nucleusProperties.cpp  nucleusProperties.hpp  star.cpp  star.hpp  starClusterMC.cpp  starClusterMC.hpp  stellarYield.cpp  stellarYield.hpp  yield.cpp  yield.hpp
tools/tests/: CMakeLists.txt  testIsotope.cpp  testStellarYield.cpp
tools/util/: rootlogon.C  rootlogon.sh
